# celiagg

./: .gitignore  .travis.yml  CHANGES.rst  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  README.rst  api.html  appveyor.yml  changelog.html  example.html  fast_hist.py  genindex.html  index.html  meson.options  objects.inv  philosophy.html  py-modindex.html  pyagg.vpj  pyproject.toml  search.html  searchindex.js  setup.py  test.bat
.github/workflows/: build-release.yml  build-wheels.yml  test-pr.yml
_sources/: example.txt  index.rst.txt  index.txt  philosophy.rst.txt  philosophy.txt
agg-svn/agg-2.4/agg2d/: agg2d.cpp  agg2d.h
agg-svn/agg-2.4/font_freetype/: agg_font_freetype.cpp  agg_font_freetype.h  agg_font_freetype2.cpp
agg-svn/agg-2.4/font_win32_tt/: agg_font_win32_tt.cpp  agg_font_win32_tt.h
agg-svn/agg-2.4/include/: agg_font_cache_manager.h  agg_gamma_lut.h  agg_rasterizer_cells_aa.h  agg_rasterizer_scanline_aa.h  agg_rasterizer_scanline_aa_nogamma.h
agg-svn/agg-2.4/src/: CMakeLists.txt
celiagg/: __init__.py  _canvas.pxd  _celiagg.pyx  _conversion.pxd  _enums.pxd  _font.pxd  _font_cache.pxd  _graphics_state.pxd  _image.pxd  _ndarray_canvas.pxd  _paint.pxd  _text_support.pxd  _transform.pxd  _vertex_source.pxd  canvas.h  canvas.hxx  canvas.pxi  canvas_image.hxx  canvas_impl.cpp  canvas_impl.h  canvas_shape.hxx  canvas_text.hxx  conversion.cpp  conversion.h  conversion.hxx  conversion.pxi  enums.pxi  font.cpp  font.h  font.pxi  font_cache.cpp  font_cache.h  font_cache.pxi  glyph_iter.cpp  glyph_iter.h  graphics_state.h  graphics_state.pxi  harfbuzz_shaper.h  image.cpp  image.h  (+17 more)
celiagg/tests/: test_canvas.py  test_drawing.py  test_font.py  test_no_text.py  test_paint.py  test_path.py  test_state.py  test_text.py  test_transform.py
ci/: build-run.sh  build-wheel-deps.sh  build-wheels.sh  install.ps1  run_with_env.cmd  test-install.sh  test-run.sh
cython/: CMakeLists.txt  _agg2d.pxd  _graphics_state.pxd  _pyagg.pxd  _pyagg.pyx  agg2d.pxi  fast_hist.pxi  graphics_state.h  graphics_state.pxi  ndarray_canvas.cpp  ndarray_canvas.h  ndarray_canvas.hxx  ndarray_canvas.pxi  pyagg.cpp  pyagg.pyx
docs/: Makefile
docs/source/: api.rst  conf.py  example.rst  index.rst  philosophy.rst  simple_ex.py
examples/: hanzi.py  image.py  python_logo.py  spiral.py  stencil.py  stroke_transform.py  svg.py  terrain.py
pyagg/: CMakeLists.txt  __init__.py  _agg2d.pxd  _enums.pxd  _font.pxd  _gradient.pxd  _graphics_state.pxd  _image.pxd  _ndarray_canvas.pxd  _paint.pxd  _path.pxd  _pyagg.cpp  _pyagg.pyx  _text.pxd  _transform.pxd  _vertex_source.pxd  agg2d.cpp  agg2d.pyx  conversion.pxi  enums.pxi  fast_hist.pxi  fast_hist.py  font.cpp  font.h  font.pxi  glyph_iter.cpp  glyph_iter.h  gradient.h  gradient.pxi  graphics_state.h  graphics_state.pxi  image.cpp  image.h  image.hxx  image.pxi  ndarray_canvas.cpp  ndarray_canvas.h  ndarray_canvas.hxx  ndarray_canvas.pxi  paint.cpp  (+13 more)
pyagg/tests/: test_basics.py  test_canvas.py  test_no_text.py  test_paint.py  test_path.py  test_state.py  test_transform.py
travis/: build-run.sh  build-wheels.sh  test-before-install.sh  test-install.sh  test-run.sh
