[build-system]
requires = ["cython", "oldest-supported-numpy", "setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
skip = 'pp*'

[tool.cibuildwheel.macos]
archs = ['auto', 'arm64', 'universal2']

[tool.cibuildwheel.linux]
archs = ['auto', 'aarch64']
before-all = "yum install freetype-devel harfbuzz-devel"

