[build-system]
requires = ["cython", "oldest-supported-numpy", "setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
skip = 'pp* *-musllinux*'

[tool.cibuildwheel.linux]
archs = ['auto', 'aarch64']
before-all = "yum install -y freetype-devel harfbuzz-devel"

authors = [
    "Corran Webster",
]
